# zzls

./: Cargo.toml  README.md
src/: config.rs  document.rs  main.rs  server.rs  workspace.rs
src/bridge/: compiler.rs  formatter.rs  mod.rs
src/diagnostics/: mod.rs  pretty.rs
src/features/: completion.rs  mod.rs
