[package]
name = "zzls"
version = "0.1.0"
edition = "2024"
description = "A fast Zig language server written in Rust"
license = "MIT"

[dependencies]
tower-lsp-server = "=0.23.0"
tokio = { version = "=1.44.2", features = ["full", "process", "io-util"] }
ropey = "=1.6.1"
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.140"
clap = { version = "=4.5.37", features = ["derive"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "fmt"] }
glob = "=0.3.2"
dirs = "=6.0.0"
ariadne = { version = "=0.5.1", features = ["auto-color"] }
url = "=2.5.4"
which = "=7.0.2"
thiserror = "=2.0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
